# food-opt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REUSE.toml  pixi.toml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml
config/: biomass.yaml  biomass_scenarios.yaml  constrained.yaml  constrained_scenarios.yaml  consumer_values.yaml  consumer_values_scenarios.yaml  consumer_values_with_GHGs.yaml  consumer_values_with_GHGs_scenarios.yaml  current_yields.yaml  default.yaml  doc_figures.yaml  example.yaml  ghg.yaml  ghg_biomass.yaml  ghg_biomass_scenarios.yaml  ghg_scenarios.yaml  ghg_yll.yaml  ghg_yll_grid.yaml  ghg_yll_grid_scenarios.yaml  ghg_yll_scenarios.yaml  grid_sensitivity_scenarios.yaml  opt.yaml  optimal_taxes.yaml  optimal_taxes_scenarios.yaml  scenarios.yaml  secrets.yaml.example  validation.yaml  validation_scenarios.yaml  yll.yaml  yll_scenarios.yaml
config/schemas/: config.schema.yaml
data/: DATASETS.md  M49-codes.csv  country_wirsenius_region.csv  crop_cost_fallbacks.yaml  crop_moisture_content.csv  cropgrids_mapping.csv  crops.csv  enteric_methane_yields.csv  fadn_animal_mapping.yaml  fadn_crop_mapping.yaml  faostat_animal_yield_mapping.yaml  faostat_crop_item_map.csv  faostat_food_item_map.csv  feed_ash_content.csv  feed_properties.csv  feed_to_animal_products.csv  food_feed_conversion.csv  food_groups.csv  foods.csv  gaez_crop_code_mapping.csv  gleam_feed_mapping.csv  gleam_livestock_emissions.csv  ifa_fubc_crop_mapping.csv  ipcc_enteric_methane_yields.csv  ipcc_manure_methane_conversion_factors.csv  ipcc_manure_methane_producing_capacity.csv  ipcc_manure_n2o_emission_factors.csv  luc_zone_parameters.csv  nutrition.csv  usda_animal_cost_sources.csv  usda_cost_sources.csv  usda_food_mapping.csv  wirsenius_feed_energy_requirements.csv  yield_unit_conversions.csv
data/gleam_tables/: manure_management_systems_fraction.csv  manure_management_systems_type.csv  monogastrics_feed_codes.csv  monogastrics_feed_yeild_fractions.csv  ruminants_feed_codes.csv  ruminants_feed_yield_fractions.csv
data/manually_downloaded/: README.md
docs/: .gitignore  README.md  analysis.rst  conf.py  configuration.rst  costs.rst  crop_production.rst  current_diets.rst  data_sources.rst  development.rst  environment.rst  food_processing.rst  health.rst  index.rst  introduction.rst  land_use.rst  livestock.rst  model_framework.rst  nutrition.rst  results.rst  workflow.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: index.rst
notebooks/: combined_sensitivity.ipynb  ghg_sensitivity.ipynb  sensitivity_utils.py  yll_sensitivity.ipynb
tools/: smk  update-figure-refs  upload-doc-figures
workflow/: Snakefile  __init__.py  scenario_generators.py
workflow/rules/: analysis.smk  animals.smk  common.smk  consumer_values.smk  crops.smk  documentation.smk  geography.smk  health.smk  luc.smk  model.smk  optimal_taxes.smk  plotting.smk  retrieve.smk  water.smk  yield_gaps.smk
workflow/scripts/: aggregate_class_areas.py  aggregate_yield_gap_all_crops.py  build_crop_yields.py  (+76 more)
(+81 files in other folders)
